--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@wdio/cucumber-framework": "^7.24.0",
         "@wdio/local-runner": "^7.24.0",
         "@wdio/spec-reporter": "^7.24.0",
+        "allure-commandline": "^2.18.1",
         "chromedriver": "^105.0.0",
         "wdio-chromedriver-service": "^7.3.2",
         "wdio-geckodriver-service": "^3.0.5"
