--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,5 +16,5 @@ jobs:
         - uses: actions/upload-artifact@v1
           if: failure()
           with:
-            name: logs
-            path: logs
+            name: Allure Report
+            path: allure-report
